@@ -4,13 +4,22 @@ Added LuaUtils:
  - TODO TODO TODO TODO TODO TODO
 Added org.lazywizard.lazylib.campaign.orbits.EllipticalOrbit:
  - Implementation of OrbitAPI that travels along an elliptical path
+Changes to AIUtils:
+ - Added getBestInterceptPoint(Vector2f point, float speed,
+   CombatEntityAPI target) - all credit goes to Dark.Revenant
 Changes to CollisionUtils:
  - Fixed getCollisionPoint() not properly updating the bounds facing/position
+Changes to CombatUtils:
+ - Fixed getFleetMember() returning null when a hulk is passed in
+ - Added spawnShipOrWingDirectly(String variantId, FleetMemberType type,
+   FleetSide side, float combatReadiness, Vector2f location, float facing)
 Changes to MathUtils:
  - isPointWithinCircle() now returns true for points on the circumference
  - Added getMidpoint(Vector2f point1, Vector2f point2)
  - Added getPointOnEllipse(Vector2f ellipseCenter, float ellipseWidth,
    float ellipseHeight, float ellipseAngleOffset, float angle)
+ - Added isPointWithinEllipse(Vector2f point, Vector2f ellipseCenter,
+   float ellipseWidth, float ellipseHeight, float ellipseAngleOffset)
 Changes to StringUtils:
  - Fixed wrapString() appending a newline when the input didn't have one
  - Also fixed a rare bug with wrapString() where it wouldn't include the last
